# char

./: .infisical.json  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cursor/commands/: new-changelog.md
.github/workflows/: changelog.yaml  desktop_cd.yaml  desktop_publish.yaml  devin_weekly_blog.yaml
apps/desktop/: index.html  package.json  tsconfig.node.json  vite.config.ts
apps/desktop/plugins/: changelog.ts
apps/desktop/src-tauri/: tauri.conf.json
apps/desktop/src/calendar/components/: calendar-selection.tsx  sidebar.tsx
apps/desktop/src/changelog/: components.tsx  data.ts  index.tsx
apps/desktop/src/services/apple-calendar/: ctx.ts  index.ts
apps/desktop/src/settings/general/: index.tsx  (+1 more)
apps/desktop/src/sidebar/: devtool.tsx
apps/web/: content-collections.ts  package.json
apps/web/content/articles/: best-ai-notetaker-for-microsoft-teams.mdx
apps/web/content/changelog/: 1.0.14-nightly.1.mdx  AGENTS.md
apps/web/content/updates/: 2026-03-08.mdx
apps/web/src/components/: image.tsx
crates/apple-calendar/: Cargo.toml
crates/apple-calendar/examples/: repro_empty_calendars.rs
crates/apple-calendar/src/: types.rs
crates/apple-calendar/src/apple/: contacts.rs  handle.rs  notifications.rs
crates/apple-calendar/src/apple/transforms/: participant.rs
crates/apple-calendar/src/fixture/data/default/base/: events.json
crates/apple-calendar/src/fixture/data/default/patch/: event_added.json
crates/apple-calendar/src/fixture/schema/: events.schema.json
crates/detect/: Cargo.toml
crates/detect/src/: language.rs  lib.rs  sleep.rs
otel/caddy/: Dockerfile
otel/collector/: Dockerfile
plugins/detect/src/: commands.rs  handler.rs
(+23 files in other folders)
