[package]
name = "apple-calendar"
version = "0.1.0"
edition = "2024"

[features]
default = []
fixture = []
specta = ["dep:specta"]
examples = []

[dependencies]
json-patch = "4.1"
jsonschema = { workspace = true }
schemars = { workspace = true, features = ["chrono04"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
specta = { workspace = true, optional = true }
strum = { workspace = true, features = ["derive"] }

backon = { workspace = true, features = ["std-blocking-sleep"] }
chrono = { workspace = true, features = ["serde"] }
itertools = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }

tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_os = "macos")'.dependencies]
block2 = { workspace = true }
objc2 = { workspace = true, features = ["exception"] }
objc2-contacts = { workspace = true, features = ["CNContactStore", "CNContact", "CNLabeledValue", "CNPhoneNumber"] }
objc2-core-graphics = { workspace = true }
objc2-event-kit = { workspace = true, features = ["EKEventStore", "EKCalendarItem", "EKCalendar", "EKParticipant", "EKObject", "EKEvent", "EKSource", "EKTypes", "EKRecurrenceRule", "EKRecurrenceEnd", "EKAlarm", "EKStructuredLocation", "EKRecurrenceDayOfWeek", "objc2-core-graphics"] }
objc2-foundation = { workspace = true, features = ["NSDate", "NSEnumerator", "NSPredicate", "NSError", "NSNotification"] }

[[example]]
name = "repro_empty_calendars"
required-features = ["examples"]
